# AIOps-Bastion

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DETAILED_DESIGN.md  DETAILED_DESIGN_v1.2.md  HANDOFF.md  REMOTE_HARDENING.md  REQUIREMENTS.md  SPIKE_REPORT.md  TRADEOFFS_v1.2.md
spike/: .env.example  01_checkpointer_crash.py  02_mcp_inprocess.py  03_llm_tool_calling.py  04_e2e_hitl.py  requirements.txt
src/aiops_bastion/: __init__.py  agent.py  exceptions.py  execution.py  llm.py  mcp_server.py  permission_gate.py  store.py  tools.py  vault.py
tests/: __init__.py  conftest.py  fakes.py  test_agent.py  test_executor.py  test_injection.py  test_integration_agent.py  test_integration_ssh.py  test_llm.py  test_mcp_server.py  test_permission_gate.py  test_smoke.py  test_store.py  test_tools.py  test_vault.py
