[project]
name = "aiops-bastion"
version = "0.1.0"
description = "AIOps-Bastion: 基于 MCP 与 RAG 的多节点智能运维堡垒机"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "XueJie" }]

# 核心运行依赖 (M1 安全地基 + Agent 编排 + MCP + LLM Provider)
# 版本据 spike 验证 (详见 docs/SPIKE_REPORT.md): resolver 自动选大版本, 实测 Python 3.14 可用
dependencies = [
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.22.0",            # AsyncSqliteSaver 依赖
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",      # OpenAI 兼容厂商 (DeepSeek/GLM) 接入
    "langchain-anthropic>=0.2.4",   # Claude 原生
    "langchain-mcp-adapters>=0.3.0",
    "mcp>=1.28.1",
    "asyncssh>=2.14",
    "cryptography>=44.0",          # Fernet + PBKDF2HMAC
    "structlog>=24.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7",
    "tenacity>=8.2",               # 重试退避
]

[project.optional-dependencies]
# 按里程碑渐进安装, 脚手架阶段不强制
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]
# M4+: FastAPI Web 层
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
]
# M5+: RAG 知识库 (重, 含 torch)
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
]
# M2+: Firebase 实时 DB/Auth
firebase = [
    "firebase-admin>=6.5",
]

# === 工具配置 ===
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]  # 行长由 formatter 管

[tool.ruff.lint.isort]
known-first-party = ["aiops_bastion"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# 第三方库 (langchain/langgraph/mcp) 类型 stub 不全, 放宽
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "injection: 注入对抗测试 (§4.3)",
    "budget: Token 预算熔断测试 (§6.6)",
    "crash: 崩溃恢复测试 (§6.8/§11)",
    "integration: 真靶机 SSH 集成测试 (env 门控, 无 env 跳过)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiops_bastion"]
